cmake_minimum_required(VERSION 3.22)

project(GLSLShader)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(GLFW_BUILD_DOCS OFF)
set(GLFW_INSTALL OFF)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vendor/glfw)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vendor/glm)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter00)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter01)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter02)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter03)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter04)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter05)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter06)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter07)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter08)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter09)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter10)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter11)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter12)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter13)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter14)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter15)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter16)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter17)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter18)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter19)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter20)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter21)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter22)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter23)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter24)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter25)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter26)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter27)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter28)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter29)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter30)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter31)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter32)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter33)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter34)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter35)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/chapter36)

if (MSVC)
    add_compile_options(/utf-8)
endif()

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/assets)
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()